# cmake_pybind11_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
cmake/: googletest.cmake  pybind11.cmake
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  main.cpp
cpp/include/my_lib/: my_lib.hpp
cpp/src/: CMakeLists.txt  my_lib.cpp
cpp/tests/: CMakeLists.txt  my_lib_tests.cpp
python/examples/: main.py
python/src/: CMakeLists.txt  my_lib.cpp
python/tests/: test_lib.py
