cmake_minimum_required(VERSION 3.21)
project(cmake_pybind11_template)

set(CMAKE_CXX_STANDARD 23)

# Windows shared library fix
# see: https://cmake.org/cmake/help/latest/guide/tutorial/Selecting%20Static%20or%20Shared%20Libraries.html
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

set(LIB_NAME my_lib)
set(LIB_TESTS_NAME lib_tests)
set(LIB_EXAMPLE_NAME lib_run)

set(PYTHON_NAME my_project)

add_subdirectory(cpp)
add_subdirectory(python)
